<resources>
    <string name="app_name">AssemblyApp</string>
    <string name="room_name">místnost</string>
    <string name="user_name">uživatel</string>
    <string name="switch1">přihlásit se</string>
    <string name="switch11">odhlásit se</string>
    <string name="switch2">Vodárna</string>
    <string name="checkbox">uložit uživatele</string>
    <string name="userNameHint">uživatel</string>
    <string name="roomNameHint">místnost</string>
    <string name="missing">Nesleduješ hasičárnu.</string>
    <string name="channel_name">S</string>
    <string name="channel_description">SS</string>
</resources>
